--- a/backend-tag-stock/docker-compose.yml
+++ b/backend-tag-stock/docker-compose.yml
@@ -1,8 +1,32 @@
 version: '3'
 services:
   db:
+    restart: always
     image: mysql
     ports:
       - "3301:3306"
     environment:
       - MYSQL_ALLOW_EMPTY_PASSWORD=yes
+    networks:
+      - service-net
+    volumes:
+      - ./mysql-data:/var/lib/mysql
+  
+  backend:
+    restart: always
+    depends_on:
+      - db
+    build: 
+      context: .
+      dockerfile: backend.dockerfile
+    ports:
+      - "8080:3000"
+    networks:
+      - service-net
+    environment:
+      - DATABASE_URL=mysql://root@db:3306/tagStock
+      - JWT_KEY=testekey
+
+networks:
+  service-net:
+    driver: bridge
