--- a/backend-tag-stock/docker-compose.yml
+++ b/backend-tag-stock/docker-compose.yml
@@ -1,7 +1,11 @@
-version: '3'
+version: '3.9'
 services:
   db:
     restart: always
+    resources:
+      limits:
+        memory: 300M   # Limite de 500 MB de memória
+        cpus: '0.5'    # Limite para 0,5 CPUs
     image: mysql
     ports:
       - "3301:3306"
@@ -13,6 +17,10 @@ services:
       - ./mysql-data:/var/lib/mysql
   
   backend:
+    resources:
+      limits:
+        memory: 300M   # Limite de 500 MB de memória
+        cpus: '0.5'  
     restart: always
     depends_on:
       - db
