🧹 CHORE: set version for mysql to 8

--- a/backend-tag-stock/docker-compose.yml
+++ b/backend-tag-stock/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     restart: always
     mem_limit: 300M   # Limite de 500 MB de memória
     cpus: '0.5'     # Limite para 0,5 CPUs
-    image: mysql
+    image: mysql:8
     ports:
       - "3301:3306"
     environment:
