--- a/app-tag-stock/.env
+++ b/app-tag-stock/.env
@@ -1,1 +1,1 @@
-EXPO_PUBLIC_URL_BACKEND_END=https://1da1-2804-690-331d-a00-fc2c-cbba-67f9-92.ngrok-free.app
+EXPO_PUBLIC_URL_BACKEND_END=http://44.211.188.85:8080
