--- a/app-tag-stock/package.json
+++ b/app-tag-stock/package.json
@@ -26,19 +26,17 @@
     "expo-system-ui": "~2.4.0",
     "node-xlsx": "^0.23.0",
     "react": "18.2.0",
-    "react-native": "0.72.4",
-    "react-native-fs": "^2.20.0",
+    "react-native": "0.72.6",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-nfc-manager": "^3.14.7",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-toast-message": "^2.1.6",
-    "react-native-web": "~0.19.6",
-    "use-file-picker": "^2.1.1"
+    "react-native-web": "~0.19.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@types/react": "~18.0.14",
+    "@types/react": "~18.2.14",
     "typescript": "^5.1.3"
   },
   "private": true
