📦 FEAT: add android project

--- a/app-tag-stock/eas.json
+++ b/app-tag-stock/eas.json
@@ -1,18 +1,27 @@
 {
-  "cli": {
-    "version": ">= 5.8.0"
-  },
   "build": {
-    "development": {
-      "developmentClient": true,
-      "distribution": "internal"
-    },
     "preview": {
-      "distribution": "internal"
+      "distribution": "internal",
+      "android": {
+        "buildType": "apk"
+      },
+      "env": {
+        "EXPO_PUBLIC_URL_BACKEND_END": "http://44.211.188.85:8080"
+      },
+      "channel": "preview"
     },
-    "production": {}
-  },
-  "submit": {
-    "production": {}
+    "preview2": {
+      "android": {
+        "gradleCommand": ":app:assembleRelease"
+      },
+      "channel": "preview2"
+    },
+    "preview3": {
+      "developmentClient": true,
+      "channel": "preview3"
+    },
+    "production": {
+      "channel": "production"
+    }
   }
 }
