--- a/app-tag-stock/app.json
+++ b/app-tag-stock/app.json
@@ -17,7 +17,10 @@
     ],
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.tag.stock"
+      "bundleIdentifier": "com.tag.stock",
+      "runtimeVersion": {
+        "policy": "appVersion"
+      }
     },
     "android": {
       "adaptiveIcon": {
@@ -25,9 +28,13 @@
         "backgroundColor": "#ffffff"
       },
       "permissions": [
-        "android.permission.NFC"
+        "android.permission.NFC",
+        "android.permission.INTERNET",
+        "android.permission.READ_EXTERNAL_STORAGE",
+        "android.permission.WRITE_EXTERNAL_STORAGE"
       ],
-      "package": "com.tag.stock"
+      "package": "com.tag.stock",
+      "runtimeVersion": "1.0.0"
     },
     "web": {
       "favicon": "./assets/favicon.png"
@@ -39,6 +46,14 @@
       "expo-build-properties",
       "expo-router",
       "expo-notifications",
+      [
+        "expo-build-properties",
+        {
+          "android": {
+            "usesCleartextTraffic": true
+          }
+        }
+      ]
     ],
     "extra": {
       "router": {
@@ -47,6 +62,9 @@
       "eas": {
         "projectId": "b64e4e82-ee29-49e2-a51c-b0291e594c29"
       }
+    },
+    "updates": {
+      "url": "https://u.expo.dev/b64e4e82-ee29-49e2-a51c-b0291e594c29"
     }
   }
 }
